--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="AppName">
+<html lang="en" ng-app="SleepScoreApp">
 	<head>
-		<title>SomeTitle</title>
+		<title>Union Pacific Sleep Score App</title>
 	</head>
 	
 	<body>
 	    
 	</body>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.2.0-rc.2/angular-route.min.js"></script>
 </html>
