--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<body>
-	    <p>This is the body of the page</p>
+	    <p>This is still the body of the page</p>
 	</body>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
