--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 	</head>
 	
 	<body>
-	    <p>This is still the body of the page</p>
+		<p>This is the body of the page</p>
+		<div ng-view></div>
+		<div ng-controller="AboutController">
+			{{message}}
+		</div>
 	</body>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
-    <script src="https://code.angularjs.org/1.2.0-rc.2/angular-route.min.js"></script>
+	<script src="https://code.angularjs.org/1.2.0-rc.2/angular-route.min.js"></script>
+	<script src="scripts/app.js"></script>
+	<script src="scripts/routeProvider.js"></script>
+	<script src="scripts/controllers/AboutController.js"></script>
 </html>
