--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<body>
 		<p>This is the body of the page</p>
 		<div ng-view></div>
-		<div ng-controller="AboutController">
-			{{message}}
-		</div>
+		<a href="#/calc">Calc</a>
+		<a href="#/about">About</a>
+		<a href="#/alarm">Alarm</a>
 	</body>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
@@ -17,4 +17,7 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/routeProvider.js"></script>
 	<script src="scripts/controllers/AboutController.js"></script>
+	<script src="scripts/controllers/AlarmController.js"></script>
+	<script src="scripts/controllers/CalcController.js"></script>
+	
 </html>
