made directives for buttons

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
 	
 	<body>
 		<p>This is the body of the page</p>
+		<buttons></buttons>
 		<div ng-view></div>
-		<a href="#/calc">Calc</a>
-		<a href="#/about">About</a>
-		<a href="#/alarm">Alarm</a>
 	</body>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 	<script src="https://code.angularjs.org/1.2.0-rc.2/angular-route.min.js"></script>
 	<script src="scripts/app.js"></script>
 	<script src="scripts/routeProvider.js"></script>
+	<script src="scripts/directives.js"></script>
 	<script src="scripts/controllers/AboutController.js"></script>
 	<script src="scripts/controllers/AlarmController.js"></script>
 	<script src="scripts/controllers/CalcController.js"></script>
