--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<body>
-		<p>This is the body of the page</p>
+		<p>This is the index page itself.</p>
 		<buttons></buttons>
 		<div ng-view></div>
 	</body>
