--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html lang="en" ng-app="SleepScoreApp">
 	<head>
 		<title>Union Pacific Sleep Score App</title>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	</head>
-	
 	<body>
+	
+	<time-select></time-select>
+		<header>
+			<h1>The NAPP</h1>
+		</header>
+		
 		<p>This is the index page itself.</p>
 		<buttons></buttons>
 		<div ng-view></div>
+		
+		
+	
 	</body>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 	<script src="https://code.angularjs.org/1.2.0-rc.2/angular-route.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="scripts/app.js"></script>
 	<script src="scripts/routeProvider.js"></script>
 	<script src="scripts/directives.js"></script>
+	<script src="scripts/services/factories.js"></script>
 	<script src="scripts/controllers/AboutController.js"></script>
 	<script src="scripts/controllers/AlarmController.js"></script>
 	<script src="scripts/controllers/CalcController.js"></script>
+	<script src="scripts/controllers/TimeController.js"></script>
 	
 </html>
