--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="SleepScoreApp">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
+  		<meta content="utf-8" http-equiv="encoding">  
 		<title>Union Pacific Sleep Score App</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link href="styles/styles.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="styles/jquery-ui.css">
 		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+		<script src="scripts/d3.min.js" charset="utf-8"></script>
+		
 
 		<script>
 		  $(function() {
@@ -23,43 +26,41 @@
 		<header>
 			<h2 id="page-title">The Sleep Station</h2>
 		</header>
-
-			<div ng-hide="userSelected">
-				<h2>Login</h2><br />
+		
+			<div class="animate-hide" ng-hide="userSelected">
 				Name:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <select id="name-select" ng-model="CurrentUser.user" ng-options="employee as employee.name for employee in DataFactory" ng-click="changeUser()">
-				    <option ng-repeat="employee in DataFactory">{{employee.name}}</option>
-				    <option selected disabled value="">Name:</option>
+				    <option ng-repeat="employee in DataFactory" value="{{$index}}">{{employee.name}}</option>
 				</select>  <br />
-				Password: <input id="password-input" type="password" ng-model="password"  value="password"/>
+				Password: <input id="password-input" type="password"  ng-model="password"  value="password"/>
 				<br />
-				<button type="submit" ng-click="checkPassword()">Login</button><br />
+				<button class="nav-buttons" type="submit" ng-click="checkPassword()">Login</button><br />
 				
 				<div id="wrongPassword">
 				</div>
 			</div>
 
-		<div ng-show="userSelected">
+		<div class="animate-hide animate-show" ng-show="userSelected">
 			<!--<buttons></buttons>-->
 			<div id="accordion">
-				<h3>Fatigue Factor</h3>
+				<h3>Fatigue Factor&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h3>
     			<div class="accord-page">
     				<ng-include src="'views/calc.html'"></ng-include>
     			</div>
-    			<h3>Alarm</h3>
+    			<h3>Alarm&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h3>
     			<div class="accord-page">
     				<ng-include src="'views/alarm.html'"></ng-include>
     			</div>
-    			<h3>User</h3>
+    			<h3>User&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h3>
     			<div class="accord-page">
     				<ng-include src="'views/user.html'"></ng-include>
     			</div>
-				<h3>About</h3>
+				<h3>About&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h3>
     			<div class="accord-page">
     				<ng-include src="'views/about.html'"></ng-include>
     			</div>
-    			<h3>Log Out</h3>
+    			<h3>Log Out&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h3>
     			<div class="accord-page">
-    				<button ng-click="logOut()">Log Out</button>
+    				<button class="nav-buttons" ng-click="logOut()">Log Out</button>
     			</div>
 			</div>
 		</div>
@@ -73,6 +74,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 	<script src="https://code.angularjs.org/1.2.0-rc.2/angular-route.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-animate.js"></script>
 	<!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
 	<script src="scripts/app.js"></script>
 	<!--script src="scripts/routeProvider.js"></script-->
@@ -83,4 +85,6 @@
 	<script src="scripts/controllers/AlarmController.js"></script>
 	<script src="scripts/controllers/UserController.js"></script>
 	<script src="scripts/controllers/CalcController.js"></script>
+	
+
 </html>
